Fix larger platform icons overflowing repo rows

--- a/src/app/activity/components/github-profile/github-profile.component.scss
+++ b/src/app/activity/components/github-profile/github-profile.component.scss
@@ -91,6 +91,13 @@
 .icon {
 	height: 32px;
 	width: 32px;
+
+	img {
+		height: 100%;
+		object-fit: contain;
+		object-position: center center;
+		width: 100%;
+	}
 }
 
 .view-all {
